Changes for 1.8.1

 - [ZBX-1473] fixed installation requires mb_string function from php 5.2 (Vedmak)
 - [ZBX-1454] fixed adding user to one group, removes all other users from group (Vedmak)
 - [ZBX-1346] improve example configuration files (Richlv)
 - [ZBX-1369] make more strings translatable (Richlv)

Changes for 1.8

 - [DEV-316] added logging of executed commands on agent side. Parameter LogRemoteCommands (Sasha)
 - [DEV-316] implemented displaying of history of remote commands (Sasha)
 - [ZBX-1444] added map link macro {host:key.func(param)} (Sasha)
 - [ZBX-1299] fixed "configure" script key "--with-ssh2[=ARG]", custom library path can be provided (Dmitry)
 - [ZBX-1409] fixed administrators cannot edit hosts (Vedmak)
 - [ZBX-1450] add disabling IPMI items if support of IPMI parameters was not compiled in (Sasha)
 - [DEV-357] added UTF8 support (Sasha)
 - [ZBX-1449] fixed possibility of editing templated graphs (Vedmak)
 - [ZBX-1174] fixed "Add host" operation in "Discovery" module, ports are now never updated when the host already exists (Dmitry)
 - [ZBX-1357] updated French translation. Thanks to alixen (Richlv)
 - [1306] fixed showing triggers that recently changed state as errors in dashboard (Vedmak)
 - [ZBX-1030] fixed security vulnerability in server allowing remote unauthenticated users to execute scripts. Thanks to Nicob (Sasha)
 - [ZBX-1437] fixed errors in events screen (Vedmak)
 - [ZBX-1433] fixed error viewing event (Vedmak)
 - [ZBX-954] improve wording on frontend buttons and elsewhere (Richlv)
 - [ZBX-1369] make more strings translatable (Richlv)
 - [ZBX-1407] fixed misc issues with popup (Aly)
 - [ZBX-1265] fixed undefined variable on user delete through API (Aly)
 - [ZBX-1419] fix MySQL upgrade patch (Richlv)
 - [ZBX-1350] drop and recreate help_items table upon upgrade (Richlv)
 - [ZBX-1418] fixed errors in frontend install wizard (Aly)
 - [ZBX-1316] changed to standard trigger edit form (Aly)